<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <android.support.v7.widget.CardView
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            app:cardCornerRadius="4dp">
        <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_book_pic"
        android:scaleType="centerCrop"
            android:contentDescription="@string/image"/>
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/published_date"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="21sp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:id="@+id/tv_published_date"
            android:layout_marginTop="16dp"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mark_favorite"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:id="@+id/b_mark_fav"
                />
        </LinearLayout>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_gravity="bottom"
            android:padding="16dp"
            android:textStyle="bold"
            android:id="@+id/tv_book_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:paddingStart="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="21sp"
        android:id="@+id/tv_description"
        android:paddingStart="32dp"
        android:paddingLeft="32dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:textColor="@android:color/black"/>
</LinearLayout>
</ScrollView>